image stretch fix

--- a/test2.css
+++ b/test2.css
@@ -66,6 +66,7 @@ li.head a:hover {
 .nepimg{
     max-width: 100%;
     max-height: 100%;
+    align-self: center;
 }
 
 
